--- a/package.json
+++ b/package.json
@@ -4,5 +4,18 @@
   "main": "index.js",
   "repository": "git@github.com:lu-anderson/api_agilizaprof.git",
   "author": "<Luanderson Santos>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.3",
+    "mongoose": "^5.9.1",
+    "nodemon": "^2.0.2",
+    "winston": "^3.2.1"
+  }
 }
